[package]
name = "app-helper"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "AppHelper library for Rust projects"
documentation = ""
homepage = ""
keywords = ["app", "conf"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"
build = false

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"
arc-swap = { path="../arc-swap" }
atomic = { path="../atomic-rs" }
hashbrown = { path="../hashbrown" }
parking_lot = { path="../parking_lot" }
roxmltree = { path="../roxmltree" }
spdlog-rs = { path="../spdlog-rs/spdlog", features = ["log", "multi-thread", "source-location"] }
clap = { path="../clap" }
commlib = { path="../commlib" }
net_packet = { path="../net_packet" }