[package]
name = "app_helper"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "AppHelper library for Rust projects"
documentation = ""
homepage = ""
keywords = ["app", "conf"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"
build = false

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"

arc-swap = { path = "../arc-swap" }
atomic = { path = "../atomic-rs" }
hashbrown = { path = "../hashbrown" }
parking_lot = { path = "../parking_lot" }
prost = { path = "../prost"}
roxmltree = { path = "../roxmltree" }
clap = { path = "../clap" }
commlib = { path = "../commlib" }
my_logger =  { path = "../my_logger-rs" }
net_packet = { path = "../net_packet-rs" }
