[package]
name = "commlib-sys-test"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library test suite for Rust projects"
edition = "2021"
readme = "README.md"
build = "build.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"
bytes = "1"
hashbrown = { path="../hashbrown" }
parking_lot = { path="../parking_lot" }
roxmltree = { path="../roxmltree" }
spdlog-rs = { path="../spdlog-rs/spdlog", features = ["log", "multi-thread", "source-location"] }
commlib-sys = { path="../commlib-sys" }
app-helper = { path="../app-helper" }

#[dev-dependencies]


[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!

