[package]
name = "commlib-sys"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library for Rust projects"
documentation = ""
homepage = ""
keywords = ["service", "signal", "event", "log"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"
build = "build-sys.rs"
links = "commlib"

[dependencies]
libc = "0.2"
lazy_static = "1"
cxx = "1"

[build-dependencies]
cxx-build = "1"
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
