[package]
name = "commlib-test"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library test suite for Rust projects"
edition = "2021"
build = "build.rs"

# conflict with pprof
#[profile.dev]
#panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
lazy_static = "1"
paste = "1"
log = "0.4"
chrono = "0.4"
tonic = "0.10"
atomic = { path="../atomic-rs" }
base64 = { path="../rust-base64" }
bytes = { path = "../bytes" }
hashbrown = { path="../hashbrown" }
http = { path = "../http" }
parking_lot = { path="../parking_lot" }
prost = { path="../prost"}
roxmltree = { path="../roxmltree" }
serde_json = { path="../json" }
spdlog-rs = { path="../spdlog-rs/spdlog", features = ["log", "multi-thread", "source-location", "flexible-string"] }
thread_local = { path = "../thread_local-rs" }
commlib = { path="../commlib" }
app-helper = { path="../app-helper" }
net_packet = { path="../net_packet-rs" }

[target.'cfg(unix)'.dependencies]
pprof = { path="../pprof-rs", features = ["flamegraph"] }

#[dev-dependencies]

[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.10"

[[example]]
name = "test_server"

[[example]]
name = "test_http"
path = "examples/test_http/main.rs"
