[package]
name = "commlib"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library for Rust projects"
documentation = ""
homepage = ""
keywords = ["service", "signal", "event", "log"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"

[features]
default = ["uuid-extras", "thread-timer"]
uuid-extras = ["uuid"]
thread-timer = ["crossbeam-channel"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", default-features = false, features = ["fs", "signal"] }
rustix = { version = "0.38", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "windef", "consoleapi", "winuser", "errhandlingapi", "libloaderapi", "winbase", "winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }
windows-sys = { version = "0.48", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_Security", "Win32_System_Console"] }
rustix = { version = "0.38", features = ["fs"] }

[target.'cfg(windows)'.dev-dependencies]
windows-sys = { version = "0.48", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_IO", "Win32_System_Console"] }
rustix = { version = "0.38", features = ["fs"] }

[dependencies]
libc = "0.2"
lazy_static = "1"
uuid = { version = "1", features = ["v4"] , optional = true}
crossbeam = "0.8"
crossbeam-channel = {version = "0.5", optional = true}
thiserror = "1"
paste = "1"
log = "0.4"
chrono = "0.4"
atomic = { path = "../atomic-rs" }
bytemuck = { path = "../bytemuck", features = ["derive"] }
bytes = { path = "../bytes" }
base64 = { path = "../rust-base64" }
curl = { path = "../curl-rust" }
hashbrown = { path = "../hashbrown" }
hex = { path = "../rust-hex" }
http = { path = "../http" }
httparse = { path = "../httparse" }
message-io = { path = "../message-io" }
opool = { path = "../opool" }
parking_lot = { path = "../parking_lot" }
prost = { path = "../prost" }
rand = { path = "../rand", features = ["small_rng"] }
roxmltree = { path = "../roxmltree" }
serde_json = { path = "../json" }
spdlog-rs = { path = "../spdlog-rs/spdlog", features = ["log", "multi-thread", "source-location", "flexible-string"] }
thread_local = { path = "../thread_local-rs" }
openssl = { path = "../rust-openssl/openssl" }
commlib-sys = { path = "../commlib-sys" }

[build-dependencies]
dunce = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
