[package]
name = "commlib"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library for Rust projects"
documentation = ""
homepage = ""
keywords = ["event", "utils"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"

[features]
default = ["uuid-extras", "thread-timer"]
uuid-extras = ["uuid"]
thread-timer = ["crossbeam-channel"]

[dependencies]
crossbeam-channel = {version = "0.5", optional = true}
lazy_static = "1"
log = "0.4"
num_cpus = "1"
paste = "1"
ring = "0.17"
uuid = { version = "1", features = ["v4"] , optional = true}

base64 = { path = "../rust-base64" }
hashbrown = { path = "../hashbrown" }
hex = { path = "../rust-hex" }
parking_lot = { path = "../parking_lot" }
rand = { path = "../rand", features = ["small_rng"] }
roxmltree = { path = "../roxmltree" }
thread_local = { path = "../thread_local-rs" }
commlib-sys = { path = "../commlib-sys" }
