[package]
name = "hello-cxx"
version = "0.1.0"
edition = "2021"
build = "build.rs"
#build = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1"
prost = "0.11"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
log = "0.4"

commlib-sys = { path="../commlib-sys" }
hex = { path="../rust-hex" }
roxmltree = { path="../roxmltree" }
serde_json = { path="../json" }

[build-dependencies]
cxx-build = "1"
miette = { version = "5", features = ["fancy"] } # optional but gives nicer error messages!
tonic-build = "0.9"
