[package]
name = "my_service"
version = "1.0.0"
authors = ["nneesshh <neckshotk@gmail.com>"]
description = "Common library for Rust projects"
documentation = ""
homepage = ""
keywords = ["service", "signal"]
categories = ["os"]
license = "MIT/Apache-2.0"
repository = ""
exclude = ["/.travis.yml", "/appveyor.yml"]
edition = "2021"
readme = "README.md"

[dependencies]
chrono = "0.4"
crossbeam-channel = "0.5"
lazy_static = "1"
libc = "0.2"
log = "0.4"
paste = "1"
ring = "0.17"
uuid = { version = "1", features = ["v4"]}

atomic = { path = "../atomic-rs" }
bytemuck = { path = "../bytemuck", features = ["derive"] }
curl = { path = "../curl-rust" }
hashbrown = { path = "../hashbrown" }
http = { path = "../http" }
httparse = { path = "../httparse" }
message-io = { path = "../message-io" }
my_logger = { path = "../my_logger-rs" }
parking_lot = { path = "../parking_lot" }
pinky-swear = { path = "../pinky-swear" }
thread_local = { path = "../thread_local-rs" }

commlib = { path = "../commlib" }
commlib-sys = { path = "../commlib-sys" }
net_packet = { path = "../net_packet-rs" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["minwindef", "windef", "consoleapi", "winuser", "errhandlingapi", "libloaderapi", "winbase", "winsock2", "ws2def", "ws2ipdef", "ws2tcpip"] }
